# ubongo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  PROJECT_ARCHITECTURE.md  PROJECT_STATE.md  PROJECT_STATUS.md  README.md  STATE.md  STATUS.md  UBONGO_BUILD.md  UBONGO_VISION.md  install-ubongo.sh  install.sh  pyproject.toml  release.sh  skills-lock.json  start-ubongo-console.sh  start-ubongo-mcp.sh  start-ubongo-signal.sh  start-ubongo-telegram.sh  start-ubongo-web.sh  start-ubongo.sh  ubongo-ctl.sh
.claude/: settings.json
.specstory/: .project.json  statistics.json
Plans/: 01-repair-recovery-ladder.md  02-invoke-agents-core.md  03-workflow-trace-view.md  04-command-registry.md  05-09-architecture-deepening-roadmap.md  05-agent-llm-envelope.md  06-agent-directives.md  08-router-plan-workflow.md  10-local-profiler.md  11-memory-profiler.md  12-profile-switch-ctl.md  13-mcp-server.md  14-19-architecture-deepening-roadmap.md  14-channel-core.md  15-daemon-loop.md  17-runner-fanout.md  18-command-packs.md  20-mcp-client.md  authoring-self-extension.md  fix-compaction-fact-preservation.md  forgeloop-adoption.md  forgeloop-harness.md  mutation-testing-and-deepening.md  phase-0-skeleton.md  phase-1-cli-echo.md  phase-10-evaluator-critic.md  phase-11-remaining-workers.md  phase-12-modes.md  phase-13-repair.md  phase-14-governance-rules.md  phase-15-approval-sandbox.md  phase-16-variants.md  phase-17-evaluation.md  phase-18-gp-loop.md  phase-19-promotions.md  phase-2-llm.md  phase-20-embeddings-graph.md  phase-21-vault-sync-audit.md  phase-3-classifier.md  phase-4-memory.md  (+19 more)
config/: UBONGO.md  governance.yaml  jobs.yaml  routing.yaml  settings.yaml  workflows.yaml
deploy/: ubongo-mcp.service  ubongo-signal-cli.service  ubongo-signal.service  ubongo-telegram.service  ubongo-web.service
docs/: 00-index.md  SECURITY.md  USER_MANUAL.md  architecture-review-2026-06-05.md  mutation-testing.md  signal-setup.md  system-architecture.md  ubongo-open-items.md
scripts/: mutation.sh  package.sh  smoke.sh
tests/: conftest.py  test_agents_base.py  test_agents_coding.py  test_agents_connector.py  test_agents_critic.py  test_agents_evaluator.py  test_agents_execution.py  test_agents_llm_run.py  test_agents_memory.py  test_agents_personas_classes.py  test_agents_repair.py  test_agents_research.py  test_approval_seam.py  test_audit_unified.py  test_authoring_candidate.py  test_authoring_fitness.py  test_authoring_gaps.py  test_authoring_loop.py  test_authoring_manual.py  test_authoring_promotion.py  test_authoring_quarantine.py  test_authoring_sandbox.py  test_authoring_validation.py  test_backup.py  test_channel.py  test_classifier.py  test_commands.py  test_config.py  test_daemon.py  test_delivery_path.py  test_delivery_queue.py  test_embeddings.py  test_events.py  (+71 more)
(+170 files in other folders)
