[project]
name = "ubongo"
version = "0.1.0"
description = "A personal, mood-aware AI mind. Multi-agent + self-improving CLI."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Giuseppe Turitto", email = "giuseppe@turitto.net" },
]
dependencies = [
    "litellm>=1.50",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ubongo"]
