[project]
name = "ubongo"
version = "0.1.0"
description = "A personal, mood-aware AI mind. Multi-agent + self-improving CLI."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Giuseppe Turitto", email = "giuseppe@turitto.net" },
]
dependencies = [
    "litellm>=1.50",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mutmut>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ubongo"]

# Mutation testing (mutmut 3.x). Coverage-guided: mutmut runs the suite once to
# map which tests cover each line, then runs only the covering tests per mutant.
# Scoped to the architecture-review refactor targets (candidates 01 & 03) so the
# first pass is a tractable safety net rather than a whole-codebase sweep. Widen
# `source_paths` as more modules are hardened. See docs/mutation-testing.md.
[tool.mutmut]
source_paths = [
    "src/ubongo/agents/repair.py",
    "src/ubongo/runner.py",
]
pytest_add_cli_args_test_selection = ["tests/"]
