[project]
name = "ubongo"
version = "0.5.7"
description = "A personal, intent-routed AI mind. Multi-agent, self-improving, self-extending CLI."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Giuseppe Turitto", email = "giuseppe@turitto.net" },
]
dependencies = [
    "litellm>=1.50",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
# Optional, post-v0.1 web channel (self-hosted Streamlit chat UI). Kept out of the
# core deps so the CLI stays lean: install with `uv sync --extra web`.
web = [
    "streamlit>=1.30",
]
mcp = [
    "mcp>=1.2",
]
# Optional, v0.5 Telegram channel. A thin httpx long-poll loop against the Bot
# API — no heavy bot framework. Kept out of core: `uv sync --extra telegram`.
telegram = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ubongo"]
